--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = "^3.8"
 elasticsearch = "^7.12.1"
 elasticsearch-dsl = "^7.3.0"
 retry = "^0.9.2"
-ipython = "^7.23.1"
+pytest-depends = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b1"
