--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [tool.poetry]
 name = "elasticbud"
-version = "1.2.1"
+version = "1.2.2"
 description = "Wrappers for writing concise Elasticsearch-integrated python APIs."
 authors = ["tasker <tasker@ialcloud.xyz>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-elasticsearch = {extras = ["async"], version = "^7.13.0"}
-elasticsearch-dsl = "^7.3.0"
-pytest-depends = "^1.0.1"
-pytest-asyncio = "^0.15.1"
-tenacity = "^7.0.0"
+elasticsearch = {extras = ["async"], version = "*"}
+elasticsearch-dsl = "*"
+pytest-depends = "*"
+pytest-asyncio = "*"
+tenacity = "*"
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b1"
